--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
         <script src="bower_components/ember-data-shim/ember-data.js"></script>
         <!-- endbuild -->
 
+        <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="js/jquery.transitions.js"></script>
         <script type="text/javascript" src="js/jquery.transitions.carousel.js"></script>
 
